--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ body{
 <h1> Thang Trinh </h1>
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br>
 Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-<form>
+<form action="https://formspree.io/thangtt1989@gmail.com"
+      method="POST">
 <input type="text" name="Ho&ten" placeholder="Name">
 <input type="email" name="email" placeholder="Mail"<br>
 <input type="submit">
