--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et 
       method="POST">
 <input type="text" name="Ho&ten" placeholder="Name">
 <input type="email" name="email" placeholder="Mail"<br>
-<input type="submit">
+<input type="submit" value="send">
 
 
 
